ingress/ingress-controller.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-ingress-controller
  labels:
    app: app-ingress
  namespace: learning
spec:
  containers:
    - name: app-ingress-controller
      image: registry.k8s.io/ingress-nginx/controller:v1.12.1@sha256:d2fbc4ec70d8aa2050dd91a91506e998765e86c96f32cffb56c503c9c34eed5b
      args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-controller-cm
      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
