ingress/ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-svc
  namespace: learning
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
