ingress/video-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-svc
  namespace: learning
spec:
  type: ClusterIP
  selector:
    app: video-frontend
  ports:
    - port: 8080
      targetPort: 8080
