ingress/wear-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wear-svc
  namespace: learning
spec:
  type: ClusterIP
  selector:
    app: wear-frontend
  ports:
    - port: 8080
      targetPort: 8080
