ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: learning
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: wear-svc
      port: 
        number: 8080
  # rules:
  #   - http:
  #       paths:
  #         - path: /wear(/|$)(.*)
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: wear-svc
  #               port:
  #                 number: 8080
  #         - path: /video(/|$)(.*)
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: video-svc
  #               port:
  #                 number: 8080
